--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "success1": "cross-env-shell echo $PATH ",
     "success2": "cross-env-shell \"echo $HOME \"",
+    "success3": "cross-env-shell PAP=TAAAAP echo $PAP ",
     "fail1": "\"echo $PATH\"",
     "fail2": "cross-env echo $PATH",
-    "fail3": "cross-env \"echo $PATH\" "
+    "fail3": "cross-env \"echo $PATH\" ",
+    "fail4": "cross-env-shell PAP TAAAAP echo $PAP "
   },
   "keywords": [],
   "author": "",
